--- a/src/styles/components/scaffolding.scss
+++ b/src/styles/components/scaffolding.scss
@@ -6,7 +6,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font: $font-style $font-variant $font-weight #{$font-size}/#{$line-height} $font-family;
-  font-size: 85% !important;
+  font-size: 84% !important;
 }
 
 // Body base
